--- a/_notebooks/Foundation/_tangibles/2024-08-28-live_review_hacks.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-08-28-live_review_hacks.ipynb
@@ -12,9 +12,10 @@
     "toc: True\n",
     "comments: True\n",
     "layout: post\n",
-    "title: Tools Hacks\n",
+    "title: Tools Hacks for 8/28\n",
     "description: This class will require you to make a Portfolio 2025 Web Site, a GitHub Account, a Slack Account, and as part of final exam will require you update your LinkedIn account.\n",
     "type: collab\n",
+    "courses: { csa: {week: 0} }\n",
     "---"
    ]
   },
