--- a/_notebooks/CSA/units_1_to_10/unit_01/2024-06-24-unit_1_primatives.ipynb
+++ b/_notebooks/CSA/units_1_to_10/unit_01/2024-06-24-unit_1_primatives.ipynb
@@ -85,11 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public class GreatestValue {\n",
@@ -137,29 +133,42 @@
      "languageId": "java"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3171915821.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_23676/3171915821.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    int zero = 0; //Whole number\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "___ zero = 0; //Whole number\n",
-    "___ pi = 3.14159; //Decimal values. Floating point numbers.\n",
-    "___ iAmTakingCSA = true; //Stores a true of false binary value\n",
-    "___ myProjectedGrad = 'A'; //Single character\n",
-    "___ iLoveCodeCodeCoding = \"Yes\"; //String of characters"
+    "int zero = 0; //Whole number\n",
+    "double pi = 3.14159; //Decimal values. Floating point numbers.\n",
+    "boolean iAmTakingCSA = true; //Stores a true of false binary value\n",
+    "char myProjectedGrad = 'A'; //Single character\n",
+    "String iLoveCodeCodeCoding = \"Yes\"; //String of characters"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Java",
-   "language": "java",
-   "name": "java"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "java",
-   "file_extension": ".jshell",
-   "mimetype": "text/x-java-source",
-   "name": "Java",
-   "pygments_lexer": "java",
-   "version": "17.0.12+0"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
