--- a/_notebooks/Foundation/_tangibles/2024-08-28-live_review_hacks.ipynb
+++ b/_notebooks/Foundation/_tangibles/2024-08-28-live_review_hacks.ipynb
@@ -26,37 +26,30 @@
     "## Tools Installation Hack (Summary)\n",
     "This was mostly review from CSP, so I'll make this summary brief. The files from github are placed on my local machine when I clone it, and I navigate to those files using the \"cd\" command to go within the repository.\n",
     "\n",
-    "These files are updated to GitHub"
+    "These files are updated to GitHub to by pushing the code\n",
+    "\n",
+    "My localhost link is http://127.0.0.1:4100/csa_blog, and only I can see what I do on localhost because it's locally. My website url is https://trevorhuang1.github.io/csa_blog/ and is unique to me."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tools Verification Hacks\n",
-    "Matthew and I both took CSP, so much of this is review. Files from GitHub are placed on my local machine using git pull and I can navigate to those files using the cd command. If I wanted to update the template of portfolio_2025, I would just use git pull within the repository terminal.\n",
-    "\n",
-    "The localhost url for my project "
+    "## Tool Verification Hacks"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Bash",
+   "language": "bash",
+   "name": "bash"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "codemirror_mode": "shell",
+   "file_extension": ".sh",
+   "mimetype": "text/x-sh",
+   "name": "bash"
   }
  },
  "nbformat": 4,
