--- a/_notebooks/CSA/units_1_to_10/unit_01/2024-06-24-unit_1_primatives.ipynb
+++ b/_notebooks/CSA/units_1_to_10/unit_01/2024-06-24-unit_1_primatives.ipynb
@@ -84,9 +84,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max Integer: 2147483647\n",
+      "Min Integer: -2147483648\n",
+      "Max Double: 1.7976931348623157E308\n",
+      "Min Double: 4.9E-324\n",
+      "Integer Max + 1, Overflow: -2147483648\n",
+      "Integer Min - 1, Underflow: 2147483647\n",
+      "Integer Max + Min: -1\n"
+     ]
+    }
+   ],
    "source": [
     "public class GreatestValue {\n",
     "    public static void main(String[] args) {\n",
@@ -127,22 +145,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "java"
     }
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3171915821.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_23676/3171915821.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    int zero = 0; //Whole number\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int zero = 0; //Whole number\n",
     "double pi = 3.14159; //Decimal values. Floating point numbers.\n",
@@ -154,21 +163,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "11.0.24+8-post-Ubuntu-1ubuntu322.04"
   }
  },
  "nbformat": 4,
