--- a/_notebooks/Home/2024-09-05-github_pages.ipynb
+++ b/_notebooks/Home/2024-09-05-github_pages.ipynb
@@ -15,7 +15,7 @@
     "title: Github Pages Mini Project Brain Write\n",
     "description: Here, Matthew and I will be writing down our ideas for the Github Pages mini project. We originally ideated on a google document, so I am just pasting it in right now.\n",
     "type: issues\n",
-    "permalink: /brain\n",
+    "permalink: brain\n",
     "courses: { csa: {week: 1} }\n",
     "---"
    ]
