peanut butter stuff

--- a/_notebooks/Home/2024-09-09-peanut_butter.ipynb
+++ b/_notebooks/Home/2024-09-09-peanut_butter.ipynb
@@ -133,6 +133,13 @@
     "peanut_resources = query('peanut butter', 10)\n",
     "print(peanut_resources)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{% include peanut_poll.html %}"
+   ]
   }
  ],
  "metadata": {
