--- a/_notebooks/Home/2024-09-05-condiments.ipynb
+++ b/_notebooks/Home/2024-09-05-condiments.ipynb
@@ -12,6 +12,7 @@
     "description: A cool place to learn a bit about condiments.\n",
     "permalink: condiment\n",
     "courses: { csa: {week: 0} }\n",
+    "menu: nav/home.html\n",
     "---"
    ]
   },
