--- a/_notebooks/Home/2024-09-05-github_pages.ipynb
+++ b/_notebooks/Home/2024-09-05-github_pages.ipynb
@@ -16,6 +16,7 @@
     "description: Here, Matthew and I will be writing down our ideas for the Github Pages mini project. We originally ideated on a google document, so I am just pasting it in right now.\n",
     "type: issues\n",
     "permalink: brain\n",
+    "menu: nav/home.html\n",
     "courses: { csa: {week: 1} }\n",
     "---"
    ]
