--- a/_notebooks/Home/2024-09-09-peanut_butter.ipynb
+++ b/_notebooks/Home/2024-09-09-peanut_butter.ipynb
@@ -12,6 +12,7 @@
     "description: Curious about peanut butter? This is the place for you.\n",
     "type: ccc\n",
     "permalink: peanut\n",
+    "menu: nav/home.html\n",
     "courses: { csa: {week: 0} }\n",
     "---"
    ]
@@ -36,7 +37,69 @@
    "source": [
     "**Before we embark on this journey, we must first ask ourselves: what is peanut butter?**\n",
     "> *Peanut butter is a food paste or spread made from ground, dry-roasted peanuts.*\n",
-    "There are many things to explore when it comes to peanut butter. This blog is meant to explore all of your questions about peanut butter.\n"
+    "There are many things to explore when it comes to peanut butter. This blog is meant to explore all of your questions about peanut butter.\n",
+    "\n",
+    "## More Wikipedia Information:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import wikipedia\n",
+    "from IPython.display import display, Markdown\n",
+    "import emoji\n",
+    "\n",
+    "terms = ['peanut butter']\n",
+    "for term in terms:\n",
+    "    result = wikipedia.search(term)\n",
+    "    summary = wikipedia.summary((result[0]))\n",
+    "    display(Markdown(summary))\n",
+    "    \n",
+    "## Want with more emojis?\n",
+    "\n",
+    "summary_cool = summary.replace('peanut',':peanuts:')\n",
+    "# summary_cool = summary.replace('Peanut',':peanuts:')\n",
+    "summary_cool = summary.replace('butter',':butter:')\n",
+    "\n",
+    "summary_cool = emoji.emojize(summary_cool)\n",
+    "\n",
+    "print(summary_cool)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import re\n",
+    "from statistics import median\n",
+    "import statistics\n",
+    "url = 'https://minimalistbaker.com/store-bought-peanut-butter-review/'\n",
+    "\n",
+    "response = requests.get(url)\n",
+    "soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "\n",
+    "p_tags = soup.find_all('p')\n",
+    "vals = []\n",
+    "for p in p_tags:\n",
+    "    if '/20' in p.get_text():\n",
+    "        floats = re.findall(\"\\d+\\.\\d+\",p.get_text())\n",
+    "        for sublist in floats:\n",
+    "            vals.append(sublist)\n",
+    "for i in range(len(vals)):\n",
+    "    vals[i] = float(vals[i])\n",
+    "\n",
+    "## The median review out of 20:\n",
+    "print(\" According to Minimalist Baker's reviews of peanut butter brands...\")\n",
+    "print('The median for the review scores for peanut butter:',median(vals))\n",
+    "print('The mean value of all the ratings for peanut butter:', statistics.mean(vals))\n",
+    "\n"
    ]
   },
   {
@@ -111,17 +174,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['https://ilovepeanutbutter.com/?srsltid=AfmBOoqVxPo-tMI5urfMzj8Ois8EhdbyjeFzJcyaGhLDiMZtOvU9cctj', 'https://ilovepeanutbutter.com/products/smooth-operator', 'https://ilovepeanutbutter.com/collections/peanut-butter', 'https://ilovepeanutbutter.com/pages/store-locator', 'https://ilovepeanutbutter.com/collections/powdered-peanut-butter', 'https://en.wikipedia.org/wiki/Peanut_butter', 'https://en.wikipedia.org/wiki/Skippy_(peanut_butter)', 'https://en.wikipedia.org/wiki/Jif_(peanut_butter)', 'https://en.wikipedia.org/wiki/Reese%27s_Peanut_Butter_Cups', 'https://en.wikipedia.org/wiki/Peanut_butter_and_jelly_sandwich']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from googlesearch import search\n",
     "def query(Search,numResults):\n",
@@ -131,7 +186,8 @@
     "    return urls\n",
     "    #\\\n",
     "peanut_resources = query('peanut butter', 10)\n",
-    "print(peanut_resources)"
+    "for link in peanut_resources:\n",
+    "    print(link)"
    ]
   },
   {
@@ -144,7 +200,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
