--- a/_posts/CSA/units_1_to_10/unit_06/2024-09-16-Unit-6.3-Lesson.ipynb
+++ b/_posts/CSA/units_1_to_10/unit_06/2024-09-16-Unit-6.3-Lesson.ipynb
@@ -45,9 +45,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "21\n",
+      "31\n",
+      "41\n",
+      "51\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 40, 50]\n"
+     ]
+    }
+   ],
    "source": [
     "int[] numbers = {10, 20, 30, 40, 50};\n",
     "for (int number : numbers) {\n",
@@ -69,14 +88,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Java\n",
+      "Python\n",
+      "Markdown\n",
+      "C++\n",
+      "Go\n",
+      "JavaScript\n",
+      "HTML\n"
+     ]
+    }
+   ],
    "source": [
     "String[] languages = {\"Java\", \"Python\", \"Markdown\", \"C++\", \"Go\", \"JavaScript\", \"HTML\"};\n",
     "\n",
-    "for (int i = 0; i<languages.length; i++) {\n",
-    "    System.out.println(languages[i]);\n",
+    "for (String language : languages) {\n",
+    "    System.out.println(language);\n",
     "};"
    ]
   },
@@ -193,7 +226,7 @@
    "mimetype": "text/x-java-source",
    "name": "java",
    "pygments_lexer": "java",
-   "version": "17.0.11+7-LTS-207"
+   "version": "17.0.12+7-Ubuntu-1ubuntu222.04"
   },
   "orig_nbformat": 4
  },
