--- a/_posts/CSA/units_1_to_10/unit_06/2024-09-16-Unit-6.4-Lesson.ipynb
+++ b/_posts/CSA/units_1_to_10/unit_06/2024-09-16-Unit-6.4-Lesson.ipynb
@@ -53,11 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -116,19 +112,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maximum value: 12\n",
-      "Minimum value: -1\n"
+      "Increase\n",
+      "Increase\n",
+      "Decrease\n",
+      "Increase\n",
+      "Decrease\n",
+      "Increase\n",
+      "Decrease\n",
+      "Increase\n"
      ]
     }
    ],
@@ -148,16 +146,16 @@
     "        \n",
     "        for (int i = 1; i < array.length; i++) {\n",
     "            // Add code here\n",
-    "            if (array[i] > max) {\n",
-    "                max = array[i];  \n",
+    "            if (array[i] > array[i-1]) {\n",
+    "                System.out.println(\"Increase\");  \n",
     "            }\n",
     "            if (array[i] < min) {\n",
-    "                min = array[i];  \n",
+    "                System.out.println(\"Decrease\");\n",
     "            }\n",
     "        }\n",
     "\n",
-    "        System.out.println(\"Maximum value: \" + max);\n",
-    "        System.out.println(\"Minimum value: \" + min);\n",
+    "        // System.out.println(\"Maximum value: \" + max);\n",
+    "        // System.out.println(\"Minimum value: \" + min);\n",
     "    }\n",
     "\n",
     "    public static void main(String[] args) {\n",
@@ -180,12 +178,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -224,18 +218,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mfor (int i=myArray.length-1; count < myArray.length; i--\u001b[0m\u001b[1m\u001b[30m\u001b[41m\u001b[0m\u001b[1m\u001b[30m;) {\u001b[0m",
+      "\u001b[1m\u001b[31m')' expected\u001b[0m",
+      ""
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "Integer[] myArray = {0, 1, 2, 3, 4, 5};\n",
+    "int count = 0;\n",
     "\n",
-    "for (int i=1; count < myArray.length; i++) {\n",
-    "    //Add code here\n",
+    "for (int i=myArray.length-1; count < myArray.length; i--;) {\n",
+    "    System.out.println(myArray[i]);\n",
+    "    count++;\n",
     "};"
    ]
   },
@@ -249,11 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public class WordShifter {  \n",
@@ -286,7 +285,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "17.0.12+7-Ubuntu-1ubuntu222.04"
   }
