--- a/_posts/CSA/units_1_to_10/unit_06/2024-09-13-Unit-6.1-Lesson.ipynb
+++ b/_posts/CSA/units_1_to_10/unit_06/2024-09-13-Unit-6.1-Lesson.ipynb
@@ -114,11 +114,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "int [] array1 = new int[5]"
+    "int [] array1 = new int[5];\n",
+    "\n",
+    "System.out.println(array1[0]);"
    ]
   },
   {
@@ -156,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,9 +194,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "System.out.println(array1[4]); // 5th element of the array"
    ]
@@ -200,9 +218,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
    "source": [
     "array1[4] = 30;\n",
     "System.out.println(array1[4]);"
@@ -229,18 +255,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[I@6ad6070c\n"
+     ]
+    }
+   ],
    "source": [
     "System.out.println(array1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 30]\n"
+     ]
+    }
+   ],
    "source": [
     "System.out.println(Arrays.toString(array1));"
    ]
@@ -259,6 +301,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "San Diego\n",
+      "San Francisco\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "[San Diego, San Jose, San Francisco, San Jose]\n"
+     ]
+    }
+   ],
+   "source": [
+    "String [] city_array = {\"San Diego\", \"Los Angeles\", \"San Francisco\", \"Sacramento\"};\n",
+    "System.out.println(city_array[0]);\n",
+    "System.out.println(city_array[2]);\n",
+    "city_array[1] = \"San Jose\";\n",
+    "city_array[3] = \"San Jose\";\n",
+    "System.out.println(city_array.length);\n",
+    "System.out.println(Arrays.toString(city_array));"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -267,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,9 +361,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "33\n",
+      "null\n"
+     ]
+    }
+   ],
    "source": [
     "Mutable[] array3; //initialize array of mutable objects\n",
     "array3 = new Mutable[3]; //set size of array3 equal to three\n",
@@ -321,6 +405,34 @@
    "source": [
     "## Popcorn Hack:\n",
     "Create four new INITIALIZED arrays, with int, string, double, and boolean types respectively. Print out the second element of each array to see the default values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "null\n",
+      "0.0\n",
+      "false\n"
+     ]
+    }
+   ],
+   "source": [
+    "int [] array1 = new int[5];\n",
+    "String [] array2 = new String[5];\n",
+    "double [] array3 = new double[5];\n",
+    "boolean [] array4 = new boolean[5];\n",
+    "\n",
+    "System.out.println(array1[1]);\n",
+    "System.out.println(array2[1]);\n",
+    "System.out.println(array3[1]);\n",
+    "System.out.println(array4[1]);"
    ]
   },
   {
@@ -446,9 +558,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "java (IJava/j!)",
+   "display_name": "Java",
    "language": "java",
-   "name": "jbang-ijava"
+   "name": "java"
   },
   "language_info": {
    "codemirror_mode": "java",
@@ -456,7 +568,7 @@
    "mimetype": "text/x-java-source",
    "name": "java",
    "pygments_lexer": "java",
-   "version": "17.0.12+7-Ubuntu-1ubuntu224.04"
+   "version": "17.0.12+7-Ubuntu-1ubuntu222.04"
   }
  },
  "nbformat": 4,
