--- a/_posts/CSA/units_1_to_10/unit_06/2024-09-13-Unit-6.2-Lesson.ipynb
+++ b/_posts/CSA/units_1_to_10/unit_06/2024-09-13-Unit-6.2-Lesson.ipynb
@@ -97,9 +97,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "public class oddIndexOnly {\n",
     "    public static void main(String[] args) {\n",
@@ -121,9 +131,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "public class evenIndexOnly {\n",
     "    public static void main(String[] args) {\n",
@@ -147,14 +166,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "public static int sumOfEvenNumbers(int[] arr) {\n",
-    "    /* \n",
-    "     * This function takes an array of integers as input and returns the sum of all even numbers in the array.\n",
-    "     */\n",
+    "    int sum = 0;\n",
+    "    for (int i = 0; i < arr.length; i++) {\n",
+    "        if (arr[i] % 2 == 0) {\n",
+    "            sum += arr[i];\n",
+    "        }\n",
+    "    }\n",
+    "    return sum;\n",
     "}\n",
     "\n",
     "// Example usage:\n",
@@ -204,14 +235,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "public static int countOccurrences(int[] arr, int target) {\n",
     "    /*\n",
     "     * This function takes an array of integers and a target integer as input and returns the number of times the target integer appears in the array.\n",
     "     */\n",
+    "    int count = 0;\n",
+    "    for (int num : arr) {\n",
+    "        if (num == target) {\n",
+    "            count++;\n",
+    "        }\n",
+    "    }\n",
+    "    return count;\n",
     "}\n",
     "\n",
     "// Example usage:\n",
@@ -239,9 +285,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[81, 65, 90, 80, 86]\n"
+     ]
+    }
+   ],
    "source": [
     "public static void main(String[] args) {    \n",
     "    int[] arr = new int[5];\n",
@@ -271,15 +325,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "public static int firstNegativeIndex(int[] arr) {\n",
     "    /*\n",
     "     * This function takes an array of integers as input and returns the index of the first negative number in the array. \n",
     "     * If there are no negative numbers in the array, the function should return -1.\n",
     "     */\n",
+    "    int position = 0;\n",
+    "    while (position < arr.length) {\n",
+    "        if (arr[position] < 0) {\n",
+    "            return position;\n",
+    "        }\n",
+    "        position++;\n",
+    "    }\n",
+    "    return -1;\n",
     "}\n",
     "\n",
     "// Example usage:\n",
@@ -337,9 +407,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3_6_4_"
+     ]
+    }
+   ],
    "source": [
     "String[] list = {\"red\", \"yellow\", \"blue\"};\n",
     "for (int i = 0; i < list.length; i++) {\n",
@@ -470,9 +548,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "java (IJava/j!)",
+   "display_name": "Java",
    "language": "java",
-   "name": "jbang-ijava"
+   "name": "java"
   },
   "language_info": {
    "codemirror_mode": "java",
@@ -480,7 +558,7 @@
    "mimetype": "text/x-java-source",
    "name": "java",
    "pygments_lexer": "java",
-   "version": "17.0.11+7-LTS-207"
+   "version": "17.0.12+7-Ubuntu-1ubuntu222.04"
   }
  },
  "nbformat": 4,
