extra work on hw

--- a/_notebooks/Homework/2024-09-25-unit_2-homework.ipynb
+++ b/_notebooks/Homework/2024-09-25-unit_2-homework.ipynb
@@ -115,6 +115,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Homework"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -223,6 +230,94 @@
     "        System.out.println(\"Name Length: \" + student2.nameLength());\n",
     "        System.out.println(\"Grade: \" + student2.getGradeAsDouble());\n",
     "        System.out.println(\"Scaled Grade: \" + student2.getScaledGrade());\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extra work on HW"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Triangle Area: 25.0\n",
+      "Circle Area: 153.93804002589985\n",
+      "Square Area: 16.0\n",
+      "Rectangle Area: 18.0\n",
+      "Trapezoid Area: 24.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Shape {\n",
+    "    private String shapeType;\n",
+    "    private double length;\n",
+    "    private double width;\n",
+    "    private double height;\n",
+    "    private double base1;\n",
+    "    private double base2;\n",
+    "\n",
+    "    // Constructor for initializing shape type and dimensions\n",
+    "    public Shape(String shapeType, double length, double width, double height, double base1, double base2) {\n",
+    "        this.shapeType = shapeType;\n",
+    "        this.length = length;\n",
+    "        this.width = width;\n",
+    "        this.height = height;\n",
+    "        this.base1 = base1;\n",
+    "        this.base2 = base2;\n",
+    "    }\n",
+    "\n",
+    "    // Method to print area information\n",
+    "    public void getArea() {\n",
+    "        if (shapeType.equals(\"triangle\")) {\n",
+    "            System.out.println(\"Triangle Area: \" + (base1 * height) / 2);\n",
+    "        } else if (shapeType.equals(\"circle\")) {\n",
+    "            System.out.println(\"Circle Area: \" + (Math.PI * Math.pow(length, 2)));\n",
+    "        } else if (shapeType.equals(\"square\")) {\n",
+    "            System.out.println(\"Square Area: \" + (length * length));\n",
+    "        } else if (shapeType.equals(\"rectangle\")) {\n",
+    "            System.out.println(\"Rectangle Area: \" + (length * width));\n",
+    "        } else if (shapeType.equals(\"trapezoid\")) {\n",
+    "            System.out.println(\"Trapezoid Area: \" + ((base1 + base2) * height) / 2);\n",
+    "        } else {\n",
+    "            System.out.println(\"Unknown shape type.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        // Example usage\n",
+    "        Shape triangle = new Shape(\"triangle\", 0, 0, 10, 5, 0);\n",
+    "        triangle.getArea();\n",
+    "\n",
+    "        Shape circle = new Shape(\"circle\", 7, 0, 0, 0, 0); // Using 'length' as the radius\n",
+    "        circle.getArea();\n",
+    "\n",
+    "        Shape square = new Shape(\"square\", 4, 0, 0, 0, 0);\n",
+    "        square.getArea();\n",
+    "\n",
+    "        Shape rectangle = new Shape(\"rectangle\", 6, 3, 0, 0, 0);\n",
+    "        rectangle.getArea();\n",
+    "\n",
+    "        Shape trapezoid = new Shape(\"trapezoid\", 0, 0, 4, 5, 7);\n",
+    "        trapezoid.getArea();\n",
     "    }\n",
     "}\n",
     "\n",
