did some stuff i forgor to do

--- a/_notebooks/Homework/2024-09-25-unit_2-homework.ipynb
+++ b/_notebooks/Homework/2024-09-25-unit_2-homework.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Popcorn Hack 1"
+    "### Object & Void Methods"
    ]
   },
   {
@@ -73,12 +73,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rahul's digitial movie catalog"
+    "### String Objects"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -89,24 +89,220 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "null\n"
+      "Skibidi!!SigmaSkibidi\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Concatentations\n",
+    "{\n",
+    "    public static void main(String[] args)\n",
+    "    {\n",
+    "        String name1 = \"Skibidi\";\n",
+    "        String name2 = new String(\"Sigma\");\n",
+    "        String name3 = new String(name1);\n",
+    "\n",
+    "        name1 += \"!!\";\n",
+    "        String mystery = name1 + name2 + name3;\n",
+    "\n",
+    "        System.out.println(mystery);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Uncomment the following method call to run the code and check your answer!\n",
+    "Concatentations.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> The code above will print out \"Skibidi!!SigmaSkibidi\" since name1 is concatted to \"Skibidi!!\", name2 is \"Sigma\", and name3 is \"Skibidi\" and they are all being concatted together."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class SubstringOfDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        String word = new String(\"skibidi\");\n",
+    "\n",
+    "        System.out.println(\"\\nWhat is printed if we only pass one parameter into the substring method?\");\n",
+    "        System.out.println(word.substring(2));\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Uncomment the following method call to run the code and check your answer!\n",
+    "SubstringOfDemo.main(null)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> The code above will print out ibidi since the substring method will only take characters after the 2nd element"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Wrapper Class & Math Module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of integers: 125\n",
+      "Product of doubles: 8.53452\n"
+     ]
+    }
+   ],
+   "source": [
+    "// fixed code. it runs now\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        Integer num1 = 50;\n",
+    "        Integer num2 = new Integer(75);\n",
+    "        \n",
+    "        Double d1 = 3.14;\n",
+    "        double d2 = new Double(2.718);\n",
+    "        \n",
+    "        System.out.println(\"Sum of integers: \" + (num1 + num2));\n",
+    "        System.out.println(\"Product of doubles: \" + (d1 * d2));\n",
+    "    }\n",
+    "}\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Integer: 50\n",
+      "Double: 3.14\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        // TODO: Create an Integer object using autoboxing\n",
+    "        Integer number = 50;\n",
+    "        // TODO: Create a double primitive from a Double object (unboxing)\n",
+    "        double decimal = new Double(3.14);\n",
+    "        // TODO: Print both values\n",
+    "        System.out.println(\"Integer: \" + number);\n",
+    "        System.out.println(\"Double: \" + decimal);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random value between 432343.234 and 6.887875453245454E14:\n",
+      "7.511117417637442E13\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.*;\n",
+    "public class Main {\n",
+    "    public static double randomize(double a, double b){\n",
+    "        // Generate a random value between a and b\n",
+    "        double squared = (b - a) * (b - a);\n",
+    "        return a + (Math.random() * Math.sqrt(squared));\n",
+    "    }\n",
+    "    public static void main(String[] args) {\n",
+    "        Scanner scan = new Scanner(System.in);\n",
+    "        double a = scan.nextDouble();\n",
+    "        double b = scan.nextDouble();\n",
+    "\n",
+    "        System.out.println(\"Random value between \" + a + \" and \" + b + \":\");\n",
+    "        System.out.println(randomize(a, b));\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rahul's digitial movie catalog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Despicable Me\n"
      ]
     }
    ],
    "source": [
     "public class Movie {\n",
-    "    public String tittle;\n",
+    "    public String title;\n",
     "    public Movie (String title) {\n",
-    "        this.tittle = tittle;\n",
+    "        this.title = title;\n",
     "    }\n",
     "    public void printTitle () {\n",
-    "        System.out.println(this.tittle);\n",
+    "        System.out.println(this.title);\n",
     "    }\n",
     "}\n",
     "\n",
     "public class Main {\n",
     "    public static void main(String[] args) {\n",
-    "        Movie myMovie = new Movie(\"sadasads\");\n",
+    "        Movie myMovie = new Movie(\"Despicable Me\");\n",
     "        myMovie.printTitle();\n",
     "    }\n",
     "}\n",
@@ -118,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Homework"
+    "### Homework"
    ]
   },
   {
@@ -240,7 +436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extra work on HW"
+    "### Extra work on HW"
    ]
   },
   {
